added new meta data to items: author, comments count, views count, reading time
changed some controls to Radio
hide some controls from Custom Query post settings

--- a/src/gutenberg/components/color-picker/style.scss
+++ b/src/gutenberg/components/color-picker/style.scss
@@ -13,6 +13,10 @@
             margin: 0;
         }
     }
+
+    .components-circular-option-picker__option {
+        color: transparent;
+    }
 }
 .vpf-component-color-picker {
     .vpf-component-color-picker-palette {
