--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -93,13 +93,44 @@
             }
         }
     }
-    .vp-portfolio__item-meta-date {
-        font-weight: var(--vp-items-style-fade--meta-date__font-weight);
-        opacity: var(--vp-items-style-fade--meta-date__font-opacity);
-    }
     .vp-portfolio__item-meta-title {
         font-size: var(--vp-items-style-fade--meta-title__font-size);
         color: inherit;
+    }
+    .vp-portfolio__item-meta-inline {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-left: calc(-1 * var(--vp-items-style-fade--meta-inline__gap));
+        font-weight: var(--vp-items-style-fade--meta-inline__font-weight);
+        line-height: var(--vp-items-style-fade--meta-inline__line-height);
+        opacity: var(--vp-items-style-fade--meta-inline__font-opacity);
+
+        > * {
+            margin-left: var(--vp-items-style-fade--meta-inline__gap);
+        }
+    }
+    .vp-portfolio__item-meta-part {
+        display: inline-flex;
+        align-items: center;
+    }
+    .vp-portfolio__item-meta-part-icon {
+        margin-right: var(--vp-items-style-fade--meta-part-icon__offset);
+
+        img,
+        svg {
+            width: var(--vp-items-style-fade--meta-part-icon__width);
+            height: auto;
+        }
+    }
+    .vp-portfolio__item-meta-author {
+        display: flex;
+        align-items: center;
+
+        img {
+            border-radius: var(--vp-items-style-fade--meta-part-icon__width);
+        }
     }
     .vp-portfolio__item-meta-excerpt {
         line-height: var(--vp-items-style-fade--meta-excerpt__line-height);
@@ -134,7 +165,8 @@
         align-items: center;
         text-align: center;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: center;
         }
     }
@@ -142,7 +174,8 @@
         align-items: flex-start;
         text-align: left;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: flex-start;
         }
     }
@@ -150,7 +183,8 @@
         align-items: flex-end;
         text-align: right;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: flex-end;
         }
     }
@@ -160,7 +194,8 @@
         justify-content: flex-start;
         text-align: center;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: center;
         }
     }
@@ -169,7 +204,8 @@
         justify-content: flex-start;
         text-align: left;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: flex-start;
         }
     }
@@ -178,7 +214,8 @@
         justify-content: flex-start;
         text-align: right;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: flex-end;
         }
     }
@@ -188,7 +225,8 @@
         justify-content: flex-end;
         text-align: center;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: center;
         }
     }
@@ -197,7 +235,8 @@
         justify-content: flex-end;
         text-align: left;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: flex-start;
         }
     }
@@ -206,7 +245,8 @@
         justify-content: flex-end;
         text-align: right;
 
-        .vp-portfolio__item-meta-categories {
+        .vp-portfolio__item-meta-categories,
+        .vp-portfolio__item-meta-inline {
             justify-content: flex-end;
         }
     }
