--- a/src/templates/items-list/items-style/_variables.scss
+++ b/src/templates/items-list/items-style/_variables.scss
@@ -21,12 +21,18 @@
     --vp-items-style-default--meta-categories__text-transform: uppercase;
     --vp-items-style-default--meta-categories__text-decoration: none;
     --vp-items-style-default--meta-categories__opacity: .8;
-    --vp-items-style-default--meta-categories__gap: 5px;
+    --vp-items-style-default--meta-categories__gap: .4em;
     --vp-items-style-default--meta-categories__separator: ", ";
 
-    // Meta Date.
-    --vp-items-style-default--meta-date__font-weight: 400;
-    --vp-items-style-default--meta-date__font-opacity: .8;
+    // Meta Inline.
+    --vp-items-style-default--meta-inline__font-weight: 400;
+    --vp-items-style-default--meta-inline__line-height: 2;
+    --vp-items-style-default--meta-inline__font-opacity: .8;
+    --vp-items-style-default--meta-inline__gap: 1em;
+
+    // Meta Parts.
+    --vp-items-style-default--meta-part-icon__offset: .5em;
+    --vp-items-style-default--meta-part-icon__width: 1.2em;
 
     // Meta Title.
     --vp-items-style-default--meta-title__font-size: 1.3em;
