--- a/src/assets/css/layout-tiles.scss
+++ b/src/assets/css/layout-tiles.scss
@@ -18,7 +18,7 @@
         &::before {
             content: "";
             display: block;
-            margin-top: 56%;
+            padding-top: 56%;
         }
     }
     .vp-portfolio__item-img img {
