added overflow hidden in Fly effect content

--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -16,6 +16,7 @@
         right: 0;
         bottom: 0;
         left: 0;
+        overflow: hidden;
         color: var(--vp-items-style-fly--overlay__color);
         text-align: center;
         text-decoration: var(--vp-items-style-fly--overlay__text-decoration);
