removed FontAwesome icons and dependency
removed options to change icons in layout (all icons moved to templates)
added new templates for wrappers and slider elements

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -53,6 +53,16 @@
     width: 33.333%;
 }
 
+// icons.
+.vp-svg-icon {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    overflow: visible;
+    font-size: inherit;
+    vertical-align: -.125em;
+}
+
 // screen readers only.
 .vp-screen-reader-text {
     // stylelint-disable-next-line
