--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -110,19 +110,15 @@
     }
     .vp-portfolio__item-meta-part-icon {
         margin-right: var(--vp-items-style-fly--meta-part-icon__offset);
-
-        img,
-        svg {
-            width: var(--vp-items-style-fly--meta-part-icon__width);
-            height: auto;
-        }
     }
     .vp-portfolio__item-meta-author {
         display: flex;
         align-items: center;
 
         img {
-            border-radius: var(--vp-items-style-fly--meta-part-icon__width);
+            width: 1em;
+            height: auto;
+            border-radius: 1em;
         }
     }
     .vp-portfolio__item-meta-excerpt {
