added a little Setup Wizard for block (resolves #41)
moved controls categories to PHP registration
disabled filter and pagination by default

--- a/src/gutenberg/block-saved/style.scss
+++ b/src/gutenberg/block-saved/style.scss
@@ -3,7 +3,7 @@
  */
 
 // Placeholder.
-.components-placeholder.vpf-component-placeholder-saved {
+.components-placeholder.vpf-setup-wizard-saved {
     flex-wrap: wrap;
 
     .components-placeholder__fieldset {
