--- a/src/gutenberg/block/style.scss
+++ b/src/gutenberg/block/style.scss
@@ -1,38 +1,25 @@
 /**
  * Editor Styles
  */
+.components-placeholder.vpf-setup-wizard {
+    > .components-placeholder__fieldset {
+        flex-direction: column;
 
-.components-placeholder.vpf-component-placeholder {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    min-height: 0;
-    padding: 14px;
-    background-color: #f8f9f9;
+        > div {
+            margin-bottom: 20px;
 
-    .components-placeholder__label {
-        flex: 1;
-        justify-content: flex-start;
-        margin-right: 14px;
-        margin-bottom: 0;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
 
-        ~ * {
-            width: auto;
+        .vpf-component-icon-selector {
+            max-width: 230px;
         }
     }
 
-    .components-placeholder__fieldset {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-
-        > a {
-            margin-right: 10px;
-        }
-
-        > .components-base-control {
-            flex: 1;
-        }
+    .components-placeholder {
+        margin-bottom: 0;
     }
 
     .spinner,
