--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -10,9 +10,11 @@
 @import "./components/code-editor/style";
 @import "./components/color-picker/style";
 @import "./components/controls-render/style";
+@import "./components/elements-selector/style";
 @import "./components/gallery-control/style";
 @import "./components/icons-selector/style";
 @import "./components/iframe-preview/style";
 @import "./components/select-control/style";
+@import "./components/pro-note/style";
 @import "./components/spinner/style";
 @import "./components/tiles-selector/style";
