--- a/src/gutenberg/components/controls-render/style.scss
+++ b/src/gutenberg/components/controls-render/style.scss
@@ -4,3 +4,13 @@
     word-break: break-word;
     opacity: .5;
 }
+
+.vpf-control-category-title-pro {
+    padding: .2em .8em;
+    margin-right: 30px;
+    margin-left: auto;
+    font-size: .8em;
+    color: #fff;
+    background-color: #2540cc;
+    border-radius: 1em;
+}
