--- a/src/templates/items-list/pagination/minimal/style.scss
+++ b/src/templates/items-list/pagination/minimal/style.scss
@@ -6,7 +6,6 @@
 .vp-pagination__style-minimal {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     padding: 0;
     margin: 0;
     list-style-type: none;
@@ -17,10 +16,13 @@
     }
 
     // align
-    &.vp-pagination__align-left {
+    .vp-portfolio__layout-elements-align-left & {
         justify-content: flex-start;
     }
-    &.vp-pagination__align-right {
+    .vp-portfolio__layout-elements-align-center & {
+        justify-content: center;
+    }
+    .vp-portfolio__layout-elements-align-right & {
         justify-content: flex-end;
     }
 
