fixed sort dropdown select min height

--- a/src/templates/items-list/sort/dropdown/_variables.scss
+++ b/src/templates/items-list/sort/dropdown/_variables.scss
@@ -5,6 +5,7 @@
     // Items.
     --vp-sort-dropdown--items__gap: 6px;
     --vp-sort-dropdown--items__min-width: 40px;
+    --vp-sort-dropdown--items__min-height: 2.7929em;
     --vp-sort-dropdown--items__padding-v: .7em;
     --vp-sort-dropdown--items__padding-h: 1.3em;
     --vp-sort-dropdown--items__font-size: .7em;
