--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -298,11 +298,11 @@ $grid_sm: 600px !default;
 .portfolio_page_visual-portfolio-settings {
     // PRO control.
     .vpf-settings-control-pro {
-        fieldset {
+        > td {
             pointer-events: none;
             opacity: .5;
         }
-        th {
+        > th {
             position: relative;
             padding-right: 50px;
 
@@ -310,7 +310,7 @@ $grid_sm: 600px !default;
                 content: "PRO";
                 position: absolute;
                 display: block;
-                top: 50%;
+                top: 30px;
                 right: 10px;
                 padding: .2em .8em;
                 font-size: .8em;
