changed items styles overlay background color to black

--- a/src/templates/items-list/items-style/fly/_variables.scss
+++ b/src/templates/items-list/items-style/fly/_variables.scss
@@ -8,7 +8,7 @@
     // Overlay.
     --vp-items-style-fly--overlay__text-decoration: none;
     --vp-items-style-fly--overlay__color: #fff;
-    --vp-items-style-fly--overlay__background-color: var(--vp-color-brand);
+    --vp-items-style-fly--overlay__background-color: #000;
 
     // Meta.
     --vp-items-style-fly--meta__padding-v: 2em;
