--- a/src/templates/items-list/items-style/fade/_variables.scss
+++ b/src/templates/items-list/items-style/fade/_variables.scss
@@ -11,7 +11,7 @@
     // Overlay.
     --vp-items-style-fade--overlay__text-decoration: none;
     --vp-items-style-fade--overlay__color: #fff;
-    --vp-items-style-fade--overlay__background-color: var(--vp-color-brand);
+    --vp-items-style-fade--overlay__background-color: #000;
 
     // Meta.
     --vp-items-style-fade--meta__padding-v: 2em;
