--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -322,3 +322,11 @@ $grid_sm: 600px !default;
         }
     }
 }
+
+/**
+ * TODO: PRO
+ */
+.vpf-settings-control-pro,
+.vpf-control-wrap-pro_note {
+    display: none;
+}
