--- a/src/gutenberg/components/tiles-selector/style.scss
+++ b/src/gutenberg/components/tiles-selector/style.scss
@@ -4,22 +4,24 @@ $tiles_selector_button_padding: 10px !default;
 .vpf-component-tiles-selector,
 .vpf-component-tiles-selector-items {
     .vpf-tiles-preview-button {
-        @extend .vpf-component-icon-selector-item;
+        @extend %vpf-icons-selector-item;
 
         position: relative;
         flex-direction: row;
         width: 33.33%;
         height: auto;
         overflow: hidden;
+        // stylelint-disable-next-line
+        background: #efefef !important;
 
         &::after {
             content: "";
             display: block;
-            margin-top: 100%;
+            margin-top: 125%;
         }
     }
     .vpf-tiles-preview-button-active {
-        @extend .vpf-component-icon-selector-item-active;
+        @extend %vpf-icons-selector-item-active;
     }
 
     [data-tiles-preview] {
@@ -37,8 +39,8 @@ $tiles_selector_button_padding: 10px !default;
     }
     .vpf-tiles-preview-item {
         position: relative;
-        border: 2px solid #000;
-        border-radius: 3px;
+        background-color: #cacaca;
+        border-radius: 2px;
 
         &::after {
             content: "";
@@ -48,11 +50,15 @@ $tiles_selector_button_padding: 10px !default;
 }
 
 .vpf-component-tiles-selector {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+
     .components-button {
-        display: flex;
-        width: 100%;
+        display: inline-flex;
         height: auto;
         padding: 10px;
+        margin-right: auto;
         text-align: left;
         white-space: normal;
         // stylelint-disable-next-line
@@ -63,7 +69,7 @@ $tiles_selector_button_padding: 10px !default;
     .vpf-tiles-preview-button {
         flex: 0 0 80px;
         width: 80px;
-        margin-right: 10px;
+        margin-left: 10px;
         pointer-events: none;
         border: 1px solid #b3b3b3;
         // stylelint-disable-next-line
@@ -73,8 +79,10 @@ $tiles_selector_button_padding: 10px !default;
 
 .vpf-component-tiles-selector-items {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 15px;
+    width: 510px;
+    max-width: 100%;
     margin: 12px 0;
 
     .vpf-tiles-preview-button {
