--- a/src/gutenberg/components/gallery-control/style.scss
+++ b/src/gutenberg/components/gallery-control/style.scss
@@ -2,69 +2,103 @@
 .vpf-component-gallery-control {
     .vpf-component-gallery-control-items {
         position: relative;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 15px;
-        width: 100%;
+        width: calc(100% + 15px);
+        margin-top: -15px;
         margin-bottom: 15px;
+        margin-left: -15px;
 
         .vpf-component-gallery-control-item {
-            min-width: 0;
-            overflow: hidden;
+            position: relative;
+            width: calc(33.33% - 15px);
+            margin-top: 15px;
+            margin-left: 15px;
             border-radius: 5px;
 
-            .components-button {
+            .vpf-component-gallery-control-item-button {
                 position: relative;
                 display: block;
                 width: 100%;
                 height: 100%;
                 padding: 0;
                 padding-bottom: 100%;
+                overflow: hidden;
                 // stylelint-disable-next-line
                 background-color: #d4d4d4 !important;
                 // stylelint-disable-next-line
                 box-shadow: none !important;
                 transition: .2s background-color;
-            }
 
-            img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                transition: .2s opacity;
-            }
+                img {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    transition: .2s opacity;
+                }
 
-            svg {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: 20px;
-                height: 20px;
-                margin-top: -10px;
-                margin-left: -10px;
-                color: #fff;
-                opacity: 0;
-                transition: .2s opacity;
-                fill: none;
-            }
+                svg {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    width: 20px;
+                    height: 20px;
+                    margin-top: -10px;
+                    margin-left: -10px;
+                    color: #fff;
+                    opacity: 0;
+                    transition: .2s opacity;
+                    fill: none;
+                }
 
-            &:hover,
-            &:focus {
-                .components-button {
+                &:hover,
+                &:focus {
                     // stylelint-disable-next-line
                     background-color: #000 !important;
-                }
-                img {
-                    opacity: .6;
-                }
-                svg {
-                    opacity: 1;
+
+                    img {
+                        opacity: .6;
+                    }
+                    svg {
+                        opacity: 1;
+                    }
                 }
             }
         }
+
+        .vpf-component-gallery-control-item-remove {
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            top: -5px;
+            right: -5px;
+            width: 20px;
+            height: 20px;
+            padding: 0;
+            color: #fff;
+            background-color: #272727;
+            border-radius: 20px;
+            opacity: 0;
+            transition: .2s opacity, .2s background-color;
+
+            svg {
+                width: 70%;
+                height: auto;
+            }
+        }
+        .vpf-component-gallery-control-item:hover .vpf-component-gallery-control-item-remove,
+        .vpf-component-gallery-control-item:focus .vpf-component-gallery-control-item-remove {
+            opacity: 1;
+        }
+    }
+    .vpf-component-gallery-control-item-add.components-button {
+        justify-content: center;
+        width: calc(100% - 15px);
+        margin-top: 15px;
+        margin-left: 15px;
+        border: 1px dashed #6d6d6d;
     }
 }
 .vpf-component-gallery-control-item-dropdown {
