--- a/src/templates/items-list/sort/dropdown/style.scss
+++ b/src/templates/items-list/sort/dropdown/style.scss
@@ -14,6 +14,7 @@
         min-width: var(--vp-sort-dropdown--items__min-width);
         min-height: var(--vp-search-default--input__min-height);
         padding: var(--vp-sort-dropdown--items__padding-v) var(--vp-sort-dropdown--items__padding-h);
+        padding-right: calc(var(--vp-sort-dropdown--items__padding-right) + var(--vp-sort-dropdown--items__arrow-size));
         margin-top: var(--vp-sort-dropdown--items__gap);
         margin-left: var(--vp-sort-dropdown--items__gap);
         font-size: var(--vp-sort-dropdown--items__font-size);
@@ -24,9 +25,14 @@
         text-transform: var(--vp-sort-dropdown--items__text-transform);
         letter-spacing: var(--vp-sort-dropdown--items__letter-spacing);
         background-color: var(--vp-sort-dropdown--items__background-color);
+        background-image: var(--vp-sort-dropdown--items__arrow);
+        background-repeat: no-repeat;
+        background-position: right var(--vp-sort-dropdown--items__padding-right) center;
+        background-size: var(--vp-sort-dropdown--items__arrow-size);
         border: none;
         border-radius: var(--vp-sort-dropdown--items__border-radius);
         transition: var(--vp-sort-dropdown-transition-duration) background-color var(--vp-sort-dropdown-transition-easing), var(--vp-sort-dropdown-transition-duration) color var(--vp-sort-dropdown-transition-easing);
+        appearance: none;
 
         &:hover,
         &:focus {
