changed default font-size in Filter, Sort and Pagination

--- a/src/templates/items-list/sort/dropdown/_variables.scss
+++ b/src/templates/items-list/sort/dropdown/_variables.scss
@@ -9,6 +9,7 @@
     --vp-sort-dropdown--items__padding-v: .7em;
     --vp-sort-dropdown--items__padding-h: 1.3em;
     --vp-sort-dropdown--items__padding-right: .75em;
+    --vp-sort-dropdown--items__font-size: .9em;
     --vp-sort-dropdown--items__font-weight: 600;
     --vp-sort-dropdown--items__line-height: 1.4;
     --vp-sort-dropdown--items__text-decoration: none;
