--- a/src/templates/items-list/filter/dropdown/_variables.scss
+++ b/src/templates/items-list/filter/dropdown/_variables.scss
@@ -8,6 +8,7 @@
     --vp-filter-dropdown--items__padding-v: .7em;
     --vp-filter-dropdown--items__padding-h: 1.3em;
     --vp-filter-dropdown--items__padding-right: .75em;
+    --vp-filter-dropdown--items__font-size: .9em;
     --vp-filter-dropdown--items__font-weight: 600;
     --vp-filter-dropdown--items__line-height: 1.4;
     --vp-filter-dropdown--items__text-decoration: none;
