added possibility to change images aspect ratio for Masonry and Grid layouts

--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -6,6 +6,7 @@
 @import "./block-saved/style";
 
 @import "./components/align-control/style";
+@import "./components/aspect-ratio/style";
 @import "./components/classes-tree/style";
 @import "./components/code-editor/style";
 @import "./components/color-picker/style";
