--- a/src/templates/items-list/pagination/minimal/style.scss
+++ b/src/templates/items-list/pagination/minimal/style.scss
@@ -114,4 +114,14 @@
             }
         }
     }
+
+    // Paged for RTL.
+    @if variable-exists(rtl) and $rtl {
+        &[data-vp-pagination-type="paged"] {
+            .vp-pagination__item-next svg,
+            .vp-pagination__item-prev svg {
+                transform: scaleX(-1);
+            }
+        }
+    }
 }
