added styles to display overlays on items focus (helpful for screen readers)

--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -145,7 +145,7 @@
     }
 
     .vp-portfolio__item:hover,
-    .vp-portfolio__item:focus {
+    .vp-portfolio__item-focus {
         .vp-portfolio__item-img img {
             transform: var(--vp-items-style-emerge--image-hover__transform);
         }
