--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -146,7 +146,7 @@
         z-index: 1;
     }
     .vp-portfolio__item:hover,
-    .vp-portfolio__item:focus {
+    .vp-portfolio__item-focus {
         .vp-portfolio__item-overlay {
             opacity: 1;
         }
