--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -26,7 +26,7 @@
         will-change: transform, opacity;
     }
     .vp-portfolio__item:hover,
-    .vp-portfolio__item:focus {
+    .vp-portfolio__item-focus {
         .vp-portfolio__item-img img {
             transform: var(--vp-items-style-default--image-hover__transform);
         }
