added images Focal Point picker

--- a/src/assets/css/_variables-main.scss
+++ b/src/assets/css/_variables-main.scss
@@ -22,6 +22,12 @@
 .vp-portfolio {
     --vp-wrap__min-height: 114px;
     --vp-elements__gap: 20px;
+
+    // Images.
+    --vp-images__object-fit: cover;
+    --vp-images__object-position: 50% 50%;
+
+    // Images Lazy.
     --vp-images-lazy__background: linear-gradient(-70deg, rgba(140, 140, 140, 0) 42%, rgba(140, 140, 140, .05) 50%, rgba(140, 140, 140, 0) 58%);
     --vp-images-lazy__background-color: rgba(140, 140, 140, .05);
     --vp-images-lazy__animation-duration: 3s;
