--- a/src/assets/css/layout-grid.scss
+++ b/src/assets/css/layout-grid.scss
@@ -24,8 +24,8 @@
     .vp-portfolio__item-img img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
-        object-position: 50% 50%;
+        object-fit: var(--vp-images__object-fit);
+        object-position: var(--vp-images__object-position);
         // stylelint-disable-next-line
         font-family: "object-fit: cover; object-position: 50% 50%;";
     }
