added Overlay support for Classic style
added Display Icons option for Classic style

--- a/src/templates/items-list/items-style/_variables.scss
+++ b/src/templates/items-list/items-style/_variables.scss
@@ -15,6 +15,13 @@
     --vp-items-style-default--meta__padding-h: 2em;
     --vp-items-style-default--meta-items__gap: 1.5em;
 
+    // Overlay.
+    --vp-items-style-default--overlay__color: #fff;
+    --vp-items-style-default--overlay__background-color: transparent;
+
+    // Meta Icon.
+    --vp-items-style-default--meta-icon__font-size: 2em;
+
     // Meta Categories.
     --vp-items-style-default--meta-categories__font-size: .9em;
     --vp-items-style-default--meta-categories__font-weight: 500;
